cập nhật lỗi createBill và updateBill